--- a/pages/More/Studio/Ferramenta/Aura.html
+++ b/pages/More/Studio/Ferramenta/Aura.html
@@ -147,7 +147,7 @@
 
     <header class="glass">
         <div style="display: flex; align-items: center; gap: 12px;">
-            <a href="../studio.html" class="nav-link">
+            <a href="../Studio.html" class="nav-link">
                 <i class="fas fa-home"></i>
                 <span>INÍCIO</span>
             </a>
