--- a/pages/More/Studio/Studio.html
+++ b/pages/More/Studio/Studio.html
@@ -208,7 +208,7 @@
                 id: 1, title: "Plataforma de Desenho",
                 desc: "​🎨 Aura: Onde seu traço encontra o impossível. Esqueça as telas brancas sem vida e as ferramentas que parecem saídas de um escritório dos anos 90. A Aura não é apenas um software de desenho; é o seu novo habitat criativo. Desenvolvida para a geração que respira estética, movimento e inovação, nossa plataforma redefine o que significa 'criar digitalmente'. ",
                 img: "https://images.unsplash.com/photo-1513364776144-60967b0f800f?w=600",
-                mainLink: "https://lorespace.com.br",
+                mainLink: "./Ferramenta/Aura.html",
                 similar: [
                     { 
                         name: "Adobe Fresco", 
