--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -179,6 +179,14 @@
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-muted)]"></i>
                         </div>
                     </li>
+
+                    <li>
+                        <a href="./More/Studio/Studio.html" class="menu-item-link">
+                            <i data-lucide="clapperboard" class="w-6 h-6 mr-4 text-pink-400"></i>
+                            <span class="flex-grow font-semibold text-lg">Studio</span>
+                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-muted)]"></i>
+                        </a>
+                    </li>
                 </ul>
             </section>
         </main>
