--- a/pages/More/Studio/Studio.html
+++ b/pages/More/Studio/Studio.html
@@ -150,7 +150,7 @@
 <body>
 
     <header>
-        <div class="back-nav"><i class="fa-solid fa-arrow-left"></i></div>
+        <a href="../../More_options.html" class="back-nav"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>Studio</h1>
     </header>
 
