--- a/pages/More/MiniGames/Quebra_Cabeça.html
+++ b/pages/More/MiniGames/Quebra_Cabeça.html
@@ -244,22 +244,43 @@
         document.getElementById('timer-display').innerText = `${mins}:${secs}`;
     }
 
-    // --- COMPARTILHAMENTO ---
+    // --- COMPARTILHAMENTO OTIMIZADO PARA INSTAGRAM ---
     async function sharePuzzle() {
         const timeStr = document.getElementById('timer-display').innerText;
-        const data = btoa(encodeURIComponent(JSON.stringify({t: currentTitle, u: currentImgUrl, s: gridSize})));
+        // Objeto encurtado para o link não ficar gigante
+        const shareObj = { u: currentImgUrl, s: gridSize };
+        const data = btoa(JSON.stringify(shareObj));
         const shareLink = `${window.location.origin}${window.location.pathname}?p=${data}`;
-        const shareData = { title: 'Desafio Anime Puzzle', text: isGameOver ? `Fiz o puzzle de ${currentTitle} em ${timeStr}!` : `Te desafio a completa-lo em menos tempo ${currentTitle}!`, url: shareLink };
-        try { if (navigator.share) { await navigator.share(shareData); } else { await navigator.clipboard.writeText(shareLink); alert("Link copiado!"); } } catch (err) {}
+        
+        const shareData = { 
+            title: 'Anime Puzzle', 
+            text: isGameOver ? `Fiz esse puzzle em ${timeStr}!` : `Duvido você resolver esse puzzle mais rápido!`, 
+            url: shareLink 
+        };
+
+        try { 
+            if (navigator.share) { 
+                await navigator.share(shareData); 
+            } else { 
+                await navigator.clipboard.writeText(shareLink); 
+                alert("Link copiado!"); 
+            } 
+        } catch (err) {}
     }
 
     function checkSharedLink() {
         const urlParams = new URLSearchParams(window.location.search);
         const p = urlParams.get('p');
-        if (p) { try { const decoded = JSON.parse(decodeURIComponent(atob(p))); gridSize = decoded.s || 3; startGame(decoded.u, decoded.t); } catch(e) {} }
+        if (p) { 
+            try { 
+                const decoded = JSON.parse(atob(p)); 
+                gridSize = decoded.s || 3; 
+                startGame(decoded.u, "Desafio Recebido"); 
+            } catch(e) {} 
+        }
     }
 
-    // --- BUSCA TEMPORADA ATUAL (SEASON NOW) ---
+    // --- BUSCA TEMPORADA ATUAL ---
     async function initGrid() {
         const grid = document.getElementById('main-grid');
         try {
@@ -277,7 +298,7 @@
                 card.onclick = () => openDiffMenu('direct', imgUrl, title);
                 grid.appendChild(card);
             });
-        } catch(e) { console.error("Erro ao carregar temporada atual", e); }
+        } catch(e) { console.error("Erro ao carregar", e); }
     }
 
     // --- CORE GAME ---
@@ -285,7 +306,12 @@
         try {
             const r = await fetch(`https://itunes.apple.com/search?term=${encodeURIComponent(t + " anime theme")}&limit=1&media=music`);
             const d = await r.json();
-            if (d.results[0]) { audio.src = d.results[0].previewUrl; audio.volume = 0.4; audio.play(); document.getElementById('audio-controls').style.display = 'flex'; }
+            if (d.results[0]) { 
+                audio.src = d.results[0].previewUrl; 
+                audio.volume = 0.4; 
+                audio.play(); 
+                document.getElementById('audio-controls').style.display = 'flex'; 
+            }
         } catch (e) {}
     }
 
@@ -293,6 +319,8 @@
         if (audio.paused) { audio.play(); document.getElementById('music-toggle-btn').innerHTML = '<i class="fa-solid fa-pause"></i>'; }
         else { audio.pause(); document.getElementById('music-toggle-btn').innerHTML = '<i class="fa-solid fa-play"></i>'; }
     }
+
+    function adjustVolume(v) { audio.volume = v; }
 
     function openDiffMenu(type, url, title) { pendingAction = { type, url, title }; document.getElementById('difficulty-menu').style.display = 'flex'; }
     function closeDiffMenu() { document.getElementById('difficulty-menu').style.display = 'none'; }
