--- a/pages/More/MiniGames/Quebra_Cabeça.html
+++ b/pages/More/MiniGames/Quebra_Cabeça.html
@@ -199,7 +199,7 @@
     <div class="modal-nav">
         <div class="logo-text">ANIME PUZZLE</div>
         <div class="search-container">
-            <button onclick="window.location.href=window.location.pathname"><i class="fa-solid fa-home"></i></button>
+            <a href="../../More_options.html"><i class="fa-solid fa-home"></i></a>
             <div class="nav-divider"></div>
             <button onclick="startVoiceSearch()"><i class="fa-solid fa-microphone"></i></button>
             <input type="text" id="userQuery" placeholder="Buscar..." autocomplete="off">
