--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -182,7 +182,7 @@
                     <li>
                         <div id="games-button" class="menu-item-link">
                             <i data-lucide="gamepad-2" class="w-6 h-6 mr-4 text-orange-400"></i>
-                            <span class="flex-grow font-semibold text-lg">Mini-games</span>
+                            <span class="flex-grow font-semibold text-lg">Playgraud</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-muted)]"></i>
                         </div>
                     </li>
@@ -223,7 +223,7 @@
     <div id="games-modal" class="modal-overlay hidden">
         <div class="modal-content">
             <div class="flex justify-between items-center mb-8 border-b border-white/10 pb-5">
-                <h3 class="text-2xl font-bold text-white">Mini-games</h3>
+                <h3 class="text-2xl font-bold text-white">Playgraud</h3>
                 <button id="close-games-modal-button" class="bg-white/5 p-2 rounded-full text-[var(--text-muted)] hover:text-white transition-all">
                     <i data-lucide="x" class="w-6 h-6"></i>
                 </button>
