--- a/pages/More/Playgraud/Memory_game.html
+++ b/pages/More/Playgraud/Memory_game.html
@@ -6,6 +6,15 @@
     <title>Anime Memory</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;600;900&display=swap" rel="stylesheet">
+     <meta name="google-adsense-account" content="ca-pub-3281893178430236">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PV154KH2JQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PV154KH2JQ');
+    </script>
     
     <style>
         :root {
