--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoreSpace</title>
     <!-- Para navegadores modernos usando PNG -->
-  <link rel="icon" type="image/png" href="/src/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/src/Favicon.png" sizes="32x32">
   
   <!-- Para máxima compatibilidade (ICO) -->
-  <link rel="shortcut icon" href="/src/favicon.png">
+  <link rel="shortcut icon" href="/src/Favicon.png">
   
   <!-- Recomendação 2026: SVG para nitidez infinita -->
-  <link rel="icon" type="image/svg+xml" href="/src/favicon.png">
+  <link rel="icon" type="image/svg+xml" href="/src/Favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
