--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title>Menu - Orion</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <meta name="google-adsense-account" content="ca-pub-3281893178430236">
@@ -233,16 +233,15 @@
                 <ul class="flex flex-col">
                     <li><a href="./More/Playgraud/Quebra_Cabeça.html" class="modal-option"><i data-lucide="puzzle" class="w-5 h-5 mr-4 text-emerald-400"></i><span class="font-medium">Quebra-cabeça</span></a></li>
                     <li><a href="./More/Playgraud/Memory_game.html" class="modal-option"><i data-lucide="brain-circuit" class="w-5 h-5 mr-4 text-yellow-400"></i><span class="font-medium">Jogo da Memória</span></a></li>
-                    <!--
-                    <li><a href="./More/Games/Maze.html" class="modal-option"><i data-lucide="map" class="w-5 h-5 mr-4 text-cyan-400"></i><span class="font-medium">Labirinto</span></a></li>
-                   --> 
-                </ul>
+                    <li><a href="./More/Playgraud/Block.html" class="modal-option"><i data-lucide="layout-grid" class="w-5 h-5 mr-4" style="color: var(--primary-color);"></i><span class="font-medium">Blocks</span></a></li>
+                    </ul>
             </nav>
         </div>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            // Inicializa os ícones do Lucide
             lucide.createIcons();
 
             // Elementos Wiki
@@ -250,11 +249,12 @@
             const wikiModal = document.getElementById('wiki-modal');
             const closeWiki = document.getElementById('close-wiki-modal-button');
 
-            // Elementos Mini-games
+            // Elementos Playgraud
             const gamesBtn = document.getElementById('games-button');
             const gamesModal = document.getElementById('games-modal');
             const closeGames = document.getElementById('close-games-modal-button');
 
+            // Função Unificada para abrir/fechar modais
             const toggleModal = (modal, action) => {
                 if (action === 'open') {
                     modal.classList.remove('hidden');
@@ -273,13 +273,13 @@
             if(gamesBtn) gamesBtn.onclick = () => toggleModal(gamesModal, 'open');
             if(closeGames) closeGames.onclick = () => toggleModal(gamesModal, 'close');
 
-            // Overlay click
+            // Fechar ao clicar fora do conteúdo (Overlay)
             window.onclick = (e) => {
                 if (e.target === wikiModal) toggleModal(wikiModal, 'close');
                 if (e.target === gamesModal) toggleModal(gamesModal, 'close');
             };
 
-            // ESC Key
+            // Fechar ao pressionar ESC
             document.addEventListener('keydown', (e) => {
                 if (e.key === 'Escape') {
                     toggleModal(wikiModal, 'close');
