--- a/pages/More/Lores/Books.html
+++ b/pages/More/Lores/Books.html
@@ -123,6 +123,18 @@
 </head>
 <body>
 
+<script>
+  atOptions = {
+    'key' : '7ce14ef3a5424c507b8ca46c5971a7bb',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/7ce14ef3a5424c507b8ca46c5971a7bb/invoke.js"></script>
+
+    
     <header class="header">
         <div class="search-pill">
             <a class="back-btn" href="../../More_options.html"><i class="fas fa-arrow-left"></i></a>
