--- a/pages/More/Lores/Characters.html
+++ b/pages/More/Lores/Characters.html
@@ -147,6 +147,19 @@
 </head>
 <body>
 
+
+<script>
+  atOptions = {
+    'key' : '7ce14ef3a5424c507b8ca46c5971a7bb',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/7ce14ef3a5424c507b8ca46c5971a7bb/invoke.js"></script>
+
+    
 <div class="app-shell">
     <div class="sidebar-area">
         <header>
