--- a/pages/More/Lores/Entertainment.html
+++ b/pages/More/Lores/Entertainment.html
@@ -190,6 +190,20 @@
 </head>
 <body>
 
+
+    <script>
+  atOptions = {
+    'key' : '7ce14ef3a5424c507b8ca46c5971a7bb',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/7ce14ef3a5424c507b8ca46c5971a7bb/invoke.js"></script>
+
+
+    
     <div id="bg-canvas"></div>
     <div id="loader"><i class="fas fa-circle-notch fa-spin fa-3x"></i></div>
 
