--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     'key' : '7ce14ef3a5424c507b8ca46c5971a7bb',
     'format' : 'iframe',
     'height' : 90,
-    'width' : 728,
+    'width' : 'auto',
     'params' : {}
   };
 </script>
