--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
                 <i class="fas fa-newspaper"></i> News
             </button>
            
-            <a href="pages/More/Assistent/Index.html" class="tab-button"><i class="fas fa-star"></i> Assistente</a>
+           <!-- <a href="pages/More/Assistent/Index.html" class="tab-button"><i class="fas fa-star"></i> Assistente</a>--->
             <a href="pages/More/partners/partners.html" class="tab-button"><i class="fas fa-heart"></i> partners</a>
             <a href="./pages/More_options.html" class="tab-button"><i class="fas fa-ellipsis-v"></i> More</a>
        
