--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -231,7 +231,7 @@
                 <ul class="flex flex-col">
                     <li><a href="./More/Playgraud/Quebra_Cabeça.html" class="modal-option"><i data-lucide="puzzle" class="w-5 h-5 mr-4 text-emerald-400"></i><span class="font-medium">Quebra-cabeça</span></a></li>
                     <li><a href="./More/Playgraud/Memory_game.html" class="modal-option"><i data-lucide="brain-circuit" class="w-5 h-5 mr-4 text-yellow-400"></i><span class="font-medium">Jogo da Memória</span></a></li>
-                    <li><a href="./More/Playgraud/Block.html" class="modal-option"><i data-lucide="layout-grid" class="w-5 h-5 mr-4" style="color: var(--primary-color);"></i><span class="font-medium">Blocks</span></a></li>
+                  <!--  <li><a href="./More/Playgraud/Block.html" class="modal-option"><i data-lucide="layout-grid" class="w-5 h-5 mr-4" style="color: var(--primary-color);"></i><span class="font-medium">Blocks</span></a></li>--->
                     </ul>
             </nav>
         </div>
