Integrate Google Tag Manager for analytics
Added Google Tag Manager script for tracking.

--- a/pages/More/Playgraud/RetroHub.html
+++ b/pages/More/Playgraud/RetroHub.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>retroHub</title>
     <script src="https://unpkg.com/lucide@latest"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PV154KH2JQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PV154KH2JQ');
+    </script>
+    
     <style>
         :root {
             --primary: #8a2be2; /* BlueViolet */
