--- a/pages/More/Playgraud/RetroHub.html
+++ b/pages/More/Playgraud/RetroHub.html
@@ -142,7 +142,7 @@
 </head>
 <body>
 
-    <a href="#" class="nav-back"><i data-lucide="arrow-left"></i></a>
+    <a href="../../More_options.html" class="nav-back"><i data-lucide="arrow-left"></i></a>
 
     <header class="page-header">
         <h1>retroHub</h1>
