Add N64 games to RetroHub

--- a/pages/More/Playgraud/RetroHub.html
+++ b/pages/More/Playgraud/RetroHub.html
@@ -207,6 +207,9 @@
             PS1: [
                 { title: "Castlevania: Symphony of the Night", url: "https://www.retrogames.cc/embed/41504-castlevania-symphony-of-the-night.html" },
                 { title: "Tekken 3", url: "https://www.retrogames.cc/embed/40238-tekken-3.html" }
+            ],
+            N64: [
+                { title:"Smash Bros 64", url:"https://www.retrogames.cc/embed/32117-super-smash-bros-usa.html"}
             ]
         };
 
