Update Google tag scripts in RetroHub.html

--- a/pages/More/Playgraud/RetroHub.html
+++ b/pages/More/Playgraud/RetroHub.html
@@ -6,13 +6,20 @@
     <title>retroHub</title>
     <script src="https://unpkg.com/lucide@latest"></script>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PV154KH2JQ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-PV154KH2JQ');
-    </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PV154KH2JQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PV154KH2JQ');
+</script>
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3281893178430236"
+     crossorigin="anonymous"></script>
+    
     
     <style>
         :root {
