Update page title from 'Menu - Orion' to 'Menu'

--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - Orion</title>
+    <title>Menu</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <meta name="google-adsense-account" content="ca-pub-3281893178430236">
