Remove old ad script and update to new source

--- a/pages/More/Lores/Entertainment.html
+++ b/pages/More/Lores/Entertainment.html
@@ -192,16 +192,7 @@
 
 
     <script>
-  atOptions = {
-    'key' : '7ce14ef3a5424c507b8ca46c5971a7bb',
-    'format' : 'iframe',
-    'height' : 90,
-    'width' : 728,
-    'params' : {}
-  };
-</script>
-<script src="https://www.highperformanceformat.com/7ce14ef3a5424c507b8ca46c5971a7bb/invoke.js"></script>
-
+  at<script src="https://pl28684699.effectivegatecpm.com/b1/4c/26/b14c26927a2d2c587729de3055dd0d13.js"></script>
 
     
     <div id="bg-canvas"></div>
