Add official social media links to Abaut.html

--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -150,8 +150,13 @@
             <h3>Canais Oficiais</h3>
             <div class="network-grid">
                 <a href="https://whatsapp.com/channel/0029Vb78G0pDTkKDA6AsBO32" target="_blank" class="net-item"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-                <a href="https://www.instagram.com/lorespace_oficial?igsh=MWZ6MHhlZzBrbG16bg==" target="_blank" class="net-item"><i class="fab fa-instagram"></i> Instagram</a>
-            </div>
+                <a href="https://youtube.com/@lorespace-y7h?si=MbhhWMyan6ml2Azh" target="_blank" class="net-item"><i class="fab fa-youtube"></i> YouTube</a>
+                <a href="https://k.kwai.com/u/@loreSpace/BFCERbSC" target="_blank" class="net-item"><i class="fas fa-play"></i> Kwai</a>
+                <a href="https://www.tumblr.com/lorespaceoficial?source=share" target="_blank" class="fab fa-tumblr net-item"> Tumblr</a>
+                <a href="https://www.snapchat.com/add/lorespace?share_id=fnMLdwwrfgQ&locale=pt-BR" target="_blank" class="net-item"><i class="fab fa-snapchat"></i> Snapchat</a>
+                <!---<a href="https://www.instagram.com/lorespace_oficial?igsh=MWZ6MHhlZzBrbG16bg==" target="_blank" class="net-item"><i class="fab fa-instagram"></i> Instagram</a>
+                --->
+              </div>
         </div>
     </div>
 
