Refactor sidebar navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -40,13 +40,21 @@
             <button class="close-btn" id="close-sidebar-btn">&times;</button>
         </div>
         <nav class="sidebar-nav">
-            <ul>
-               <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
-               <li><a href="pages/Terms/terms_of_use.html"><i class="fas fa-file-contract"></i> Termos de uso</a></li>
-               <li><a href="pages/Terms/Privacy_Policy.html"><i class="fas fa-file-alt"></i> Política de privacidade</a></li>
-       
-            </ul>
-        </nav>
+        <ul>
+        <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
+        <li><a href="pages/Terms/terms_of_use.html"><i class="fas fa-file-contract"></i> Termos de uso</a></li>
+        <li><a href="pages/Terms/Privacy_Policy.html"><i class="fas fa-file-alt"></i> Política de privacidade</a></li>
+        </ul>
+
+    <div class="sidebar-separator"></div>
+    <h3 class="sidebar-section-title">Temas Próprios</h3>
+    <ul>
+        <li><a href="pages/Lores.html"><i class="fas fa-book-open"></i> Lores</a></li>
+        <li><a href="pages/Playground.html"><i class="fas fa-gamepad"></i> Playground</a></li>
+        <li><a href="pages/Studio.html"><i class="fas fa- paintbrush"></i> Studio</a></li>
+    </ul>
+  </nav>
+
         <div class="sidebar-footer">
              <p>&copy; 2026 LoreSpace</p>
         </div>
