Update Studio link to new file path

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <ul>
         <li><a href="pages/Lores.html"><i class="fas fa-book-open"></i> Lores</a></li>
         <li><a href="pages/Playground.html"><i class="fas fa-gamepad"></i> Playground</a></li>
-        <li><a href="pages/Studio.html"><i class="fas fa- paintbrush"></i> Studio</a></li>
+        <li><a href="pages/More/Studio/Studio.html"><i class="fas fa- paintbrush"></i> Studio</a></li>
     </ul>
   </nav>
 
