--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h3 class="sidebar-section-title">Temas Próprios</h3>
     <ul>
         <li><a href="pages/Lores.html"><i class="fas fa-book-open"></i> Lores</a></li>
-        <li><a href="pages/Playground.html"><i class="fas fa-gamepad"></i> Playground</a></li>
+        <li><a href="pages/More/Playground/RetroHub.html"><i class="fas fa-gamepad"></i> Playground</a></li>
         <li><a href="pages/More/Studio/Studio.html"><i class="fas fa- paintbrush"></i> Studio</a></li>
     </ul>
   </nav>
